# MarketWise

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .coverage  .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: market.py  router.py
backend/app/api/endpoints/: market.py  uploadCSV.py
backend/app/clients/: alpha_vantage.py
backend/app/core/: config.py
backend/app/models/: market.py
backend/app/schemas/: analytics.py  market.py  ohlcv.py  response_model.py
backend/app/services/: market_data_service.py  uploadFile.py
backend/app/services/adapters/: alpha_adapter.py  csv_adaptor.py
backend/app/services/analytics/: movingAverage.py  returns.py  risk.py  signal.py  volatility.py
backend/app/tests/: test_alpha_adapter.py  test_csv_adapter.py  test_market_data_service.py  test_movingAverage.py  test_returns.py  test_risk_analytics.py  test_signals.py  test_volatility.py
backend/app/validators/: documentValidator.py
frontend/: package.json
frontend/frontend/: package-lock.json  package.json
frontend/frontend/src/: App.tsx
frontend/frontend/src/api/: market.tsx  uploadFile.tsx
frontend/frontend/src/components/: FileUploader.tsx  Header.module.css  Header.tsx  MetricCard.tsx  OHLCVTable.tsx  PriceChart.module.css  PriceChart.tsx  ReturnsChart.tsx  Sidebar.module.css  (+2 more)
frontend/src/: App.module.css  App.tsx
frontend/src/api/: market.tsx
frontend/src/components/: Header.tsx  LoadButton.tsx  MetricCard.module.css  Sidebar.module.css  Sidebar.tsx
frontend/src/hooks/: useAlphaData.tsx  useFileUploader.tsx
frontend/src/mappers/: marketMapper.ts
frontend/src/types/: hooks.ts  ui.ts
sample-data/: sample_market_data.csv  test_ohlcv.csv
(+10 files in other folders)
