[project]
name = "marketwisebackend"
version = "0.1.0"
description = "Market Data Analyser with python and React"
authors = [
    {name = "rezaatae",email = "r.atae@yahoo.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
